Add cards && services
Signed-off-by: Brando Vidal <yisusdracon@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,22 @@
             </form>
           </article>
         </section>
+        <section class="services" id="services">
+          <h2 class="title">We offer high demand services</h2>
+          <section class="cards-container">
+            <article class="card">
+              <picture
+                ><img src="assets/img/devchallenges.png" alt=""
+              /></picture>
+              <h3 class="title">UI/UX Design</h3>
+              <p class="content">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
+                metus ac nulla consequat aliquet id quis turpis.
+              </p>
+              <button class="btn-muted">Get started</button>
+            </article>
+          </section>
+        </section>
       </main>
       <footer class="footer">Brando Vidal @ DevChallenges.io</footer>
     </section>
