Update cards && service && create works
Signed-off-by: Brando Vidal <yisusdracon@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1,
   maximum-scale=5"
     />
-    <link rel="icon" href="devchallenges.png" />
+    <link rel="icon" href="assets/img/devchallenges.png" />
     <link
       rel="shortcut icon"
       type="image/x-icon"
@@ -38,7 +38,9 @@
         <section class="home">
           <header class="info">
             <h5 class="subtitle txt-primary">Unhappy with your website?</h5>
-            <h2 class="title">We create beautiful and fast web services</h2>
+            <h2 class="title home-title">
+              We create beautiful and fast web services
+            </h2>
           </header>
           <picture
             ><img src="assets/img/heroImage.jpg" alt="reunion"
@@ -70,11 +72,13 @@
           </article>
         </section>
         <section class="services" id="services">
-          <h2 class="title">We offer high demand services</h2>
+          <h2 class="title page-title">We offer high demand services</h2>
           <section class="cards-container">
             <article class="card">
-              <picture
-                ><img src="assets/img/devchallenges.png" alt=""
+              <picture class="bg-primary"
+                ><img
+                  src="assets/svg/services/pencil.svg"
+                  alt="UI/UX Design Service"
               /></picture>
               <h3 class="title">UI/UX Design</h3>
               <p class="content">
@@ -82,6 +86,44 @@
                 metus ac nulla consequat aliquet id quis turpis.
               </p>
               <button class="btn-muted">Get started</button>
+            </article>
+            <article class="card hover">
+              <picture class="bg-success"
+                ><img
+                  src="assets/svg/services/code.svg"
+                  alt="Front End Service"
+              /></picture>
+              <h3 class="title">Front End</h3>
+              <p class="content">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
+                metus ac nulla consequat aliquet id quis turpis.
+              </p>
+              <button class="btn-primary">Get started</button>
+            </article>
+            <article class="card">
+              <picture class="bg-secondary"
+                ><img
+                  src="assets/svg/services/server.svg"
+                  alt="Back End Service"
+              /></picture>
+              <h3 class="title">Back End</h3>
+              <p class="content">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
+                metus ac nulla consequat aliquet id quis turpis.
+              </p>
+              <button class="btn-muted">Get started</button>
+            </article>
+          </section>
+        </section>
+        <section class="works" id="works">
+          <h2 class="title page-title">We offer high demand services</h2>
+          <section class="gallery">
+            <article class="item">
+              <picture>
+                <img src="assets/img/works/smarthome.jpg" alt="" />
+              </picture>
+              <h6 class="subtitle">Full stack application</h6>
+              <h2 class="title">Smart home dashboard</h2>
             </article>
           </section>
         </section>
