--- a/src/index.html
+++ b/src/index.html
@@ -31,13 +31,13 @@
           <li class="item"><a href="#services">Services</a></li>
           <li class="item"><a href="#works">Our Works</a></li>
           <li class="item"><a href="#clients">Clients</a></li>
-          <li class="item"><a href="#contact">Contact</a></li>
+          <li class="item"><a href="#header-contact">Contact</a></li>
         </ul>
       </nav>
       <main>
         <section class="home">
           <header class="info">
-            <h5 class="subtitle txt-primary">Unhappy with your website?</h5>
+            <h5 class="subtitle text-primary">Unhappy with your website?</h5>
             <h2 class="title home-title">
               We create beautiful and fast web services
             </h2>
@@ -53,7 +53,7 @@
               your strategic goals in short period of time.
             </p>
           </article>
-          <article class="info contact">
+          <article class="info contact" id="header-contact">
             <form>
               <div class="form-group">
                 <label for="email">Want us to contact you?</label>
@@ -116,7 +116,7 @@
           </section>
         </section>
         <section class="works" id="works">
-          <h2 class="title page-title">We offer high demand services</h2>
+          <h2 class="title page-title">Good design means good business</h2>
           <section class="gallery">
             <article class="item">
               <picture>
@@ -125,11 +125,114 @@
               <h6 class="subtitle">Full stack application</h6>
               <h2 class="title">Smart home dashboard</h2>
             </article>
+            <article class="item">
+              <picture>
+                <img src="assets/img/works/onboard.png" alt="" />
+              </picture>
+              <h6 class="subtitle">UX/UI design</h6>
+              <h2 class="title">Onboard application</h2>
+            </article>
+            <article class="item">
+              <picture>
+                <img src="assets/img/works/booking.png" alt="" />
+              </picture>
+              <h6 class="subtitle">Mobile application</h6>
+              <h2 class="title">Booking system</h2>
+            </article>
+            <article class="item">
+              <picture>
+                <img src="assets/img/works/juice-product.png" alt="" />
+              </picture>
+              <h6 class="subtitle">Front End application</h6>
+              <h2 class="title">Juice product homepage</h2>
+            </article>
           </section>
+          <article class="view-more">
+            <a href="#"
+              >see more <img src="assets/svg/works/arrow-right.svg" alt="" />
+            </a>
+          </article>
+        </section>
+        <section class="clients" id="clients">
+          <article class="info">
+            <h6 class="subtitle">Meet the team</h6>
+            <h2 class="title">We are chilled and a laidback team</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </article>
+          <article class="images">
+            <picture>
+              <img src="assets/img/clients/person3.png" alt="" />
+            </picture>
+            <picture>
+              <img src="assets/img/clients/person1.png" alt="" />
+            </picture>
+            <picture>
+              <img src="assets/img/clients/person2.png" alt="" />
+            </picture>
+          </article>
+        </section>
+        <section class="testimonial" id="testimonial">
+          <p class="comment">
+            “Fast and outstanding resutls. Edie understands their customer’s
+            needs. They have a young and talented team.”
+          </p>
+          <div class="info">
+            <picture
+              ><img src="assets/img/clients/person4.png" alt=""
+            /></picture>
+            <div class="content">
+              <label class="title">Carlos Tran</label>
+              <p class="subtitle">The Decorate Gatsby</p>
+            </div>
+          </div>
         </section>
       </main>
-      <footer class="footer">Brando Vidal @ DevChallenges.io</footer>
     </section>
+    <footer class="footer">
+      <section class="content">
+        <nav>
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#works">Our Works</a></li>
+            <li><a href="#clients">Clients</a></li>
+            <li><a href="#footer-contact">Contact</a></li>
+          </ul>
+        </nav>
+        <article class="social">
+          <label class="title">Edie</label>
+          <div class="icons">
+            <picture
+              ><img src="assets/svg/social/instagram.svg" alt=""
+            /></picture>
+            <picture
+              ><img src="assets/svg/social/linkedin.svg" alt=""
+            /></picture>
+            <picture
+              ><img src="assets/svg/social/twitter.svg" alt=""
+            /></picture>
+          </div>
+        </article>
+        <article class="info contact" id="footer-contact">
+          <form>
+            <div class="form-group">
+              <label for="email">Want us to contact you?</label>
+              <div class="input-group">
+                <input
+                  class="input-email"
+                  type="text"
+                  name="email"
+                  placeholder="Email"
+                  maxlength="30"
+                />
+                <button class="btn-input">Join</button>
+              </div>
+            </div>
+          </form>
+        </article>
+      </section>
+      <small class="copy">created by Brando Vidal - devChallenges.io</small>
+    </footer>
     <script src="./index.js"></script>
   </body>
 </html>
