🚀 Refactor using ViteJS
Signed-off-by: Brando Vidal <yisusdracon@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1,
-  maximum-scale=5"
-    />
-    <link rel="icon" href="assets/img/devchallenges.png" />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://devchallenges.io/"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
+    <link rel="icon" href="/img/devchallenges.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/" />
     <title>Edie Homepage</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -38,19 +30,14 @@
         <section class="home">
           <header class="info">
             <h5 class="subtitle text-primary">Unhappy with your website?</h5>
-            <h2 class="title home-title">
-              We create beautiful and fast web services
-            </h2>
+            <h2 class="title home-title">We create beautiful and fast web services</h2>
           </header>
-          <picture
-            ><img src="assets/img/heroImage.jpg" alt="reunion"
-          /></picture>
+          <picture><img src="/img/heroImage.jpg" alt="reunion" /></picture>
           <article class="info message">
             <h2 class="title">Story, emotion and purpose</h2>
             <p class="">
-              We help transform your ideas into real world applications that
-              will outperform your toughest competition and help you achieve
-              your strategic goals in short period of time.
+              We help transform your ideas into real world applications that will outperform your toughest competition
+              and help you achieve your strategic goals in short period of time.
             </p>
           </article>
           <article class="info contact" id="header-contact">
@@ -58,13 +45,7 @@
               <div class="form-group">
                 <label for="email">Want us to contact you?</label>
                 <div class="input-group">
-                  <input
-                    class="input-email"
-                    type="text"
-                    name="email"
-                    placeholder="Email"
-                    maxlength="30"
-                  />
+                  <input class="input-email" type="text" name="email" placeholder="Email" maxlength="30" />
                   <button class="btn-input">Join</button>
                 </div>
               </div>
@@ -75,41 +56,29 @@
           <h2 class="title page-title">We offer high demand services</h2>
           <section class="cards-container">
             <article class="card">
-              <picture class="bg-primary"
-                ><img
-                  src="assets/svg/services/pencil.svg"
-                  alt="UI/UX Design Service"
-              /></picture>
+              <picture class="bg-primary"><img src="/svg/services/pencil.svg" alt="UI/UX Design Service" /></picture>
               <h3 class="title">UI/UX Design</h3>
               <p class="content">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
-                metus ac nulla consequat aliquet id quis turpis.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis
+                turpis.
               </p>
               <button class="btn-muted">Get started</button>
             </article>
             <article class="card hover">
-              <picture class="bg-success"
-                ><img
-                  src="assets/svg/services/code.svg"
-                  alt="Front End Service"
-              /></picture>
+              <picture class="bg-success"><img src="/svg/services/code.svg" alt="Front End Service" /></picture>
               <h3 class="title">Front End</h3>
               <p class="content">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
-                metus ac nulla consequat aliquet id quis turpis.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis
+                turpis.
               </p>
               <button class="btn-primary">Get started</button>
             </article>
             <article class="card">
-              <picture class="bg-secondary"
-                ><img
-                  src="assets/svg/services/server.svg"
-                  alt="Back End Service"
-              /></picture>
+              <picture class="bg-secondary"><img src="/svg/services/server.svg" alt="Back End Service" /></picture>
               <h3 class="title">Back End</h3>
               <p class="content">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a
-                metus ac nulla consequat aliquet id quis turpis.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis
+                turpis.
               </p>
               <button class="btn-muted">Get started</button>
             </article>
@@ -120,37 +89,35 @@
           <section class="gallery">
             <article class="item">
               <picture>
-                <img src="assets/img/works/smarthome.jpg" alt="" />
+                <img src="/img/works/smarthome.jpg" alt="" />
               </picture>
               <h6 class="subtitle">Full stack application</h6>
               <h2 class="title">Smart home dashboard</h2>
             </article>
             <article class="item">
               <picture>
-                <img src="assets/img/works/onboard.png" alt="" />
+                <img src="/img/works/onboard.png" alt="" />
               </picture>
               <h6 class="subtitle">UX/UI design</h6>
               <h2 class="title">Onboard application</h2>
             </article>
             <article class="item">
               <picture>
-                <img src="assets/img/works/booking.png" alt="" />
+                <img src="/img/works/booking.png" alt="" />
               </picture>
               <h6 class="subtitle">Mobile application</h6>
               <h2 class="title">Booking system</h2>
             </article>
             <article class="item">
               <picture>
-                <img src="assets/img/works/juice-product.png" alt="" />
+                <img src="/img/works/juice-product.png" alt="" />
               </picture>
               <h6 class="subtitle">Front End application</h6>
               <h2 class="title">Juice product homepage</h2>
             </article>
           </section>
           <article class="view-more">
-            <a href="#"
-              >see more <img src="assets/svg/works/arrow-right.svg" alt="" />
-            </a>
+            <a href="#">see more <img src="/svg/works/arrow-right.svg" alt="" /> </a>
           </article>
         </section>
         <section class="clients" id="clients">
@@ -161,25 +128,23 @@
           </article>
           <article class="images">
             <picture>
-              <img src="assets/img/clients/person3.png" alt="" />
+              <img src="/img/clients/person3.png" alt="" />
             </picture>
             <picture>
-              <img src="assets/img/clients/person1.png" alt="" />
+              <img src="/img/clients/person1.png" alt="" />
             </picture>
             <picture>
-              <img src="assets/img/clients/person2.png" alt="" />
+              <img src="/img/clients/person2.png" alt="" />
             </picture>
           </article>
         </section>
         <section class="testimonial" id="testimonial">
           <p class="comment">
-            “Fast and outstanding resutls. Edie understands their customer’s
-            needs. They have a young and talented team.”
+            “Fast and outstanding resutls. Edie understands their customer’s needs. They have a young and talented
+            team.”
           </p>
           <div class="info">
-            <picture
-              ><img src="assets/img/clients/person4.png" alt=""
-            /></picture>
+            <picture><img src="/img/clients/person4.png" alt="" /></picture>
             <div class="content">
               <label class="title">Carlos Tran</label>
               <p class="subtitle">The Decorate Gatsby</p>
@@ -202,15 +167,9 @@
         <article class="social">
           <label class="title">Edie</label>
           <div class="icons">
-            <picture
-              ><img src="assets/svg/social/instagram.svg" alt=""
-            /></picture>
-            <picture
-              ><img src="assets/svg/social/linkedin.svg" alt=""
-            /></picture>
-            <picture
-              ><img src="assets/svg/social/twitter.svg" alt=""
-            /></picture>
+            <picture><img src="/svg/social/instagram.svg" alt="" /></picture>
+            <picture><img src="/svg/social/linkedin.svg" alt="" /></picture>
+            <picture><img src="/svg/social/twitter.svg" alt="" /></picture>
           </div>
         </article>
         <article class="info contact" id="footer-contact">
@@ -218,13 +177,7 @@
             <div class="form-group">
               <label for="email">Want us to contact you?</label>
               <div class="input-group">
-                <input
-                  class="input-email"
-                  type="text"
-                  name="email"
-                  placeholder="Email"
-                  maxlength="30"
-                />
+                <input class="input-email" type="text" name="email" placeholder="Email" maxlength="30" />
                 <button class="btn-input">Join</button>
               </div>
             </div>
@@ -233,6 +186,7 @@
       </section>
       <small class="copy">created by Brando Vidal - devChallenges.io</small>
     </footer>
-    <script src="./index.js"></script>
+
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
