--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
-    <link rel="icon" href="/img/devchallenges.png" />
-    <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/" />
     <title>Edie Homepage</title>
+    
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=5" />
+    <meta name="keywords" content="devchallengues, Edie Homepage" />
+    <meta name="description" content="Edie Homepage" />
+    <meta name="theme-color" content="#16161D" />
+
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="./logo192.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+
+    <meta name="description" content="Edie Homepage" data-react-helmet="true" />
+    <meta property="og:title" content="Edie Homepage" data-react-helmet="true" />
+    <meta property="og:description" content="Edie Homepage" data-react-helmet="true" />
+    <meta property="og:url" content="https://edie-homepage.pages.dev/" data-react-helmet="true" />
+    <meta property="og:image" content="./logo192.png" data-react-helmet="true" />
+
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
